fix: set nowrap on the filter list items
Refs: EDG-10891

--- a/packages/pelagos/src/filters/FilterList.less
+++ b/packages/pelagos/src/filters/FilterList.less
@@ -47,6 +47,7 @@
 	border: none;
 	border-radius: 3px;
 	padding: @sp-04 @sp-08;
+	white-space: nowrap;
 	cursor: pointer;
 }
 
